syntax = "proto3";

package com.road.yishi.proto.questionnarie;

message QuestionDataRspMsg {
  int32 isFirst = 1;
  int32 id = 2;
  repeated int32 infolist = 3;
}
