syntax = "proto3";

package com.road.yishi.proto.questionnarie;

message QuestionnarieInfoMsg {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string starTime = 4;
  string endTime = 5;
}
